# pyjoibot

./: .editorconfig  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
pyjoibot/: .gitignore  README.md  __main__.py  local.env
pyjoibot/bots/: config.py  discord_to_telegram.py  utils.py
pyjoibot/discord/: __init__.py  config.py  utils.py
